z-index issue fixed

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -14,6 +14,7 @@
 }
 
 .menu {
+  z-index: 10;
   gap: 20px;
   list-style-type: none;
 }
